<resources>
    <string name="app_name">MaterialesSoto</string>
    <string name="texto01">Bienvenido</string>
    <string name="texto02">Ingresar</string>
    <string name="texto03">Olvidaste tu contraseña?</string>
    <string name="texto04">¿Aún no tienes cuenta?</string>
    <string name="texto05">Registrar</string>
    <string name="texto06">Estoy registrado</string>
    <string name="texto07">Confirmar datos</string>
    <string name="texto08">Correguir datos</string>
    <string name="texto09">Cerrar Sesión</string>
    <string name="texto10">Recuperar Contraseña</string>
    <string name="texto11">Materiales Soto</string>
    <string name="hint01">Coreo Electrónico</string>
    <string name="hint02">Contraseña</string>
    <string name="hint03">Nombre</string>
    <string name="hint04">Apellido Paterno</string>
    <string name="hint05">Apellido Materno</string>
</resources>