<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="20dp"
    tools:context=".Login"
    android:backgroundTint="#EFE9D0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logoms"
            android:scaleX=".6"
            android:scaleY=".6"
            android:layout_marginTop="-180dp"
            android:layout_marginBottom="-180dp"
            android:transitionName="logo_trans" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bienvenido a"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_marginTop="-10dp"
                android:textColor="#9F2B1C" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto11"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="30dp"
                android:textColor="#9F2B1C" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingresa tus datos para comenzar"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="80dp"
                android:textColor="#C95B3C" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="40dp"
            android:paddingHorizontal="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/correo_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint01"
                app:boxStrokeColor="#c42217"
                android:textColorHint="#010335"
                android:layout_marginBottom="10dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint02"
                app:boxStrokeColor="#c42217"
                android:textColorHint="#010335">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_olvidar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto03"
                android:textAlignment="textEnd"
                android:backgroundTint="#00000000"
                android:textSize="14dp"
                android:textColor="#072156"
                android:layout_marginTop="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto02"
                android:textAllCaps="true"
                android:backgroundTint="#9F2B1C"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto04"
                android:textAlignment="textEnd"
                android:backgroundTint="#00000000"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="#2C2828"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>