<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarRegistro"
    android:background="#EFE9D0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logoms"
            android:scaleX=".6"
            android:scaleY=".6"
            android:layout_marginTop="-180dp"
            android:layout_marginBottom="-180dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto01"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textColor="#9F2B1C"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/etiqueta_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Etiqueta Nombre"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#072156"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:id="@+id/etiqueta_credenciales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Etiqueta Credenciales"
            android:textSize="20dp"
            android:textColor="#072156"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="30dp"
            />
        <Button
            android:id="@+id/btn_confirmar_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto07"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:backgroundTint="#0091EA"
            android:layout_marginTop="50dp"

            app:iconSize ="30dp"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="40dp"/>
        <Button
            android:id="@+id/btn_corregir_datos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto08"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:backgroundTint="#C1271D"
            android:layout_marginTop="20dp"

            app:iconSize ="30dp"
            app:cornerRadius="10dp"
            android:layout_marginHorizontal="40dp"/>

    </LinearLayout>


</ScrollView>